# raid6

./: .gitignore  CMakeLists.txt  README.md  build.bat
gui/: README.md  boilerplate.txt  main.js  package-lock.json  package.json
gui/public/: index.html
gui/src/: App.svelte  Disk.svelte
src/app/: CMakeLists.txt  raid6.cpp
src/lib/: CMakeLists.txt  libraid6.cpp  rs.cpp  rs.h  string_utils.cpp
src/lib/include/: bin_format.h  bson_util.h
src/lib/include/libraid6/: block_dir_device.hpp  block_dir_fs.hpp  libraid6.h  perm_dir.h  perm_dir_mongo.hpp  perm_dir_source.hpp  perm_dir_sqlite.hpp  string_utils.h  test_pattern_source.hpp  types.h
test/: table_printer.cpp  table_printer.h  table_printer.tpp.h  test.cpp  test.vcxproj  test.vcxproj.filters
